försöker minska bilden men går ej, blir nog bra endå

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="mystyle.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -13,8 +13,26 @@
 
         <main class = "saker">
             
+                <img id="kaopatbild" src="kao pat.jpg" alt="bilden till Pao Pat"/>
+
+          
+
+            <div class ="column ingredienser">
+
+                <h2>Ingredienser</h2>
+                <ul>
+                    <li>3 msk Soja</li>
+                    <li>2 msk Sesamolja</li>
+                    <li>Gammalt Ris</li>
+                    <li>1 tsk Salt</li>
+                    <li>2 Ägg</li>
+                    <li>Olja</li>
 
 
+
+                </ul>
+
+            </div>
 
 
 
