gjorde så att instruktioner och ingredienser är tillsammans

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
                 <h2>Ingredienser</h2>
                 <ul>
-                    <li>3 msk Soja</li>
+                    <li><a href="https://handla.ica.se/produkt/1008043">3 msk Soja</a></li>
                     <li>2 msk Sesamolja</li>
                     <li>Gammalt Ris</li>
                     <li>1 tsk Salt</li>
@@ -35,7 +35,7 @@
 
                 <ol>    
                     <li>Stek riset på medium värme med olja.</li>
-                <li>När riset är varmt tillsätt vätskorna och rör om.</li>
+                <li>är riset är varmt tillsätt vätskorna och rör om.</li>
                 <li>När det blir varmare, knäck i ägg och låt de steka.</li>
                 <li>Rör sedan om riset med äggen och låt äggen bli helt genomstekta.</li>
                 <li>Häll i salt för att få fram smak.</li>
@@ -45,13 +45,18 @@
 
 
         </main>
-    <footer class "footer">
+    <footer>
         <p>Sigma@gmail.com</p>
     </footer>
 
     <div class = "sociala-medier">
         <img src="img/youtube jpeg.jpg" alt ="youtube bild länk"/>
         <img src="img/insta gram jpeg v2.webp" alt ="instgram bild länk"/>
+
+    </div>
+
+    <div class="Länkar-till-mat">
+        <p></p>
 
     </div>
 </body>
