--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
                 <h2>Ingredienser</h2>
                 <ul>
                     <li><a href="https://handla.ica.se/produkt/1008043">3 msk Soja</a></li>
-                    <li>2 msk Sesamolja</li>
+                    <li><a href="https://handla.ica.se/produkt/1505785">2 msk Sesamolja</a></li>
                     <li>Gammalt Ris</li>
                     <li>1 tsk Salt</li>
-                    <li>2 Ägg</li>
+                    <li><a href="https://handla.ica.se/produkt/1288064">2 ägg</a></li>
                     <li>Olja</li>
                 </ul>
             </div>
@@ -55,9 +55,6 @@
 
     </div>
 
-    <div class="Länkar-till-mat">
-        <p></p>
-
-    </div>
+    
 </body>
 </html>
